2012-10-05  W. James MacLean  <wjmaclean@chromium.org>

        [chromium] Enhance support for transforms in LinkHighlight.
        https://bugs.webkit.org/show_bug.cgi?id=94355

        Reviewed by Adrienne Walker.

        Improved handling of transformed highlight targets, where the transform goes beyond simple translation.

        * src/LinkHighlight.cpp:
        (WebKit::convertTargetSpaceQuadToCompositedLayer): Converts target space quad to composited layer coordinates.
        (WebKit):
        (WebKit::addQuadToPath): Supports adding non-rectilinear quads to Path.
        (WebKit::LinkHighlight::computeHighlightLayerPathAndPosition): Updated to deal with target's quadlist, transform individual quads according to transforms.
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::bestTouchLinkNode):

2012-10-05  Julien Chaffraix  <jchaffraix@webkit.org>

        Unreviewed build fix after r130545.

        * tests/WebFrameTest.cpp:
        Avoid a warning about truncating the double constant on Windows. While touching the variable, changed
        it to be proper camelCase.

2012-10-05  Oli Lan  <olilan@chromium.org>

        Allow EventHandler to handle longpress gestures, including longpress selection on Android.
        https://bugs.webkit.org/show_bug.cgi?id=98173

        Reviewed by Ryosuke Niwa.

        This patch changes the longpress gesture handling code in WebViewImpl to call EventHandler::handleGestureEvent.
        The WebCore part of this patch adds longpress handling to that method, including the long press selection behaviour
        required for Android. This means that a long press gesture performed on word (that is not part of a link)
        selects the word, without generating a context menu event.

        A new test, WebViewTest.LongPressSelection has been added to test this.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::handleGestureEvent):
        (WebViewImpl):
        * tests/WebViewTest.cpp: